# extralit-hf-space

./: .pre-commit-config.yaml  Dockerfile  NOTICE  Procfile  README.md  app.py  plan.md  pyproject.toml  requirements.txt  test_integration.py  test_job_import.py  test_worker_startup.py  worker.py
.github/workflows/: argilla-server.build-docker-images.yml  build-hf-space.yml  integration-test.yml
config/: elasticsearch.yml
extralit_ocr/: extract.py  jobs.py  schemas.py
extralit_ocr/jobs/: pdf_extraction_jobs.py
scripts/: start.sh
src/: app.py  config.py  extract.py  redis_connection.py  schemas.py  worker.py
src/jobs/: __init__.py  extraction_jobs.py  pdf_extraction_jobs.py
tests/: .oauth.yml  test_integration.py  test_job_import.py  test_runner.py  test_worker_startup.py
